objects/CMPL123QMS__OOS_Investigation__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OOS_Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Conclusion__c</fullName>
        <label>Conclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CMPL123QMS__Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hypothesis__c</fullName>
        <label>Hypothesis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Investigation_Results__c</fullName>
        <label>Investigation Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Is_Additional_Testing_Required__c</fullName>
        <label>Is Additional Testing Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__OOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OOS</label>
        <referenceTo>CMPL123QMS__OOS__c</referenceTo>
        <relationshipLabel>OOS Investigations</relationshipLabel>
        <relationshipName>OOS_Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Category__c</fullName>
        <label>Root Cause Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calculation Error</fullName>
                </value>
                <value>
                    <fullName>Power Outage</fullName>
                </value>
                <value>
                    <fullName>Spillage</fullName>
                </value>
                <value>
                    <fullName>Equipment Parameters</fullName>
                </value>
                <value>
                    <fullName>Technician Error</fullName>
                </value>
                <value>
                    <fullName>Sample/Standard Prep</fullName>
                </value>
                <value>
                    <fullName>Analytical Method</fullName>
                </value>
                <value>
                    <fullName>Equipment Failure</fullName>
                </value>
                <value>
                    <fullName>Deviation from Procedure</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Details__c</fullName>
        <label>Root Cause Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Determined__c</fullName>
        <label>Root Cause Determined?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Test_Plan__c</fullName>
        <label>Test Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>OOS Investigation</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__OOS__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OOS-INV-{00000}</displayFormat>
        <label>OOS Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OOS Investigations</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Phase_1A_Investigation</fullName>
        <active>true</active>
        <label>Phase 1A Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Phase_1B_Investigation</fullName>
        <active>true</active>
        <label>Phase 1B Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Phase_2_Lab_Investigation</fullName>
        <active>true</active>
        <label>Phase 2 Lab Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Phase_2_Manufacturing_Investigation</fullName>
        <active>true</active>
        <label>Phase 2 Manufacturing Investigation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Date_Cannot_Be_Set_In_Past</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  CMPL123QMS__Due_Date__c  &lt; TODAY(), OR( ISNEW(), ISCHANGED( CMPL123QMS__Due_Date__c )))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date cannot be set in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Root_cause_and_Additional_Testing</fullName>
        <active>true</active>
        <description>Prevent Root Cause Determined and Is Additional Testing Required? both being set to Yes.</description>
        <errorConditionFormula>AND(ISPICKVAL(CMPL123QMS__Root_Cause_Determined__c, 'Yes'), ISPICKVAL( CMPL123QMS__Is_Additional_Testing_Required__c , 'Yes'))</errorConditionFormula>
        <errorMessage>Cannot set both Root Cause Determined and Is Additional Testing Required? to Yes.</errorMessage>
    </validationRules>
</CustomObject>